# org-roam-mcp

./: .gitignore  CHANGELOG.md  ENHANCED_SETUP_GUIDE.md  README.md  enhanced_orchestrator.sh  pyproject.toml  test_improvements.py  workflow_patterns.py
scripts/: test_improvements.py  workflow_patterns.py
src/org_roam_mcp/: __init__.py  config.py  database.py  file_manager.py  server.py
tests/: test_database.py  test_file_manager.py
