[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org-roam-mcp"
version = "0.1.0"
description = "Model Context Protocol server for org-roam knowledge base integration"
authors = [{name = "User"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
org-roam-mcp = "org_roam_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/org_roam_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/scripts",
    "/.claude",
    "/venv",
    "enhanced_orchestrator.sh",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
exclude = ["scripts/", "tests/"]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"